--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .text-link {
+        @apply font-medium text-indigo-500 underline hover:text-indigo-600 dark:text-indigo-400 dark:hover:text-indigo-500;
+    }
+}
